[workspace]
resolver = "2"
members = [
    "crates/freighter",
    "crates/freighter-api-types",
    "crates/freighter-auth",
    "crates/freighter-client",
    "crates/freighter-pg-index",
    "crates/freighter-fs-index",
    "crates/freighter-server",
    "crates/freighter-storage",
]
default-members = ["crates/freighter"]

[workspace.package]
version = "1.3.0"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>", "Kornel Lesiński <kornel@cloudflare.com>"]
description = "Cloudflare's third-party Rust registry implementation"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cloudflare/freighter"
publish = ["crates-io", "freighter", "freighter-staging", "freighter-local"]
keywords = ["registries", "freighter"]
categories = []

[workspace.dependencies]
freighter-api-types = { path = "crates/freighter-api-types", version = "1.0.0" }
freighter-client = { path = "crates/freighter-client", version = "1.0.0" }
freighter-auth = { path = "crates/freighter-auth", version = "1.0.0" }
freighter-pg-index = { path = "crates/freighter-pg-index", version = "1.0.0" }
freighter-fs-index = { path = "crates/freighter-fs-index", version = "1.0.0" }
freighter-server = { path = "crates/freighter-server", version = "1.0.0" }
freighter-storage = { path = "crates/freighter-storage", version = "1.0.0" }

anyhow = "1.0.79"
async-trait = "0.1.81"
aws-credential-types = "1.2.0"
aws-sdk-s3 = "1.44.0"
axum = { version = "0.6.20", default-features = false }
axum-extra = { version = "0.7.7", features = ["json-lines"] }
base64 = "0.22"
bytes = "1.7.1"
chrono = { version = "0.4.38", default-features = false, features = ["std", "serde"] }
clap = { version = "4.5", default-features = false }
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
futures-util = { version = "0.3.30", default-features = false }
hyper = { version = "0.14.30", default-features = false }
metrics = "0.23.0"
metrics-exporter-prometheus = { version = "0.15.0", default-features = false, features = ["http-listener"] }
postgres-types = "0.2.7"
rand = { version = "0.8.5", features = ["min_const_gen"] }
reqwest = { version = "0.11.23", default-features = false, features = ["json"] }
semver = { version = "1.0.21", features = ["serde"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
hmac = "0.12.1" # must share digest with sha2
tempfile = "3.9.0"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tokio-stream = { version = "0.1.14", default-features = false }
tower = { version = "0.4.13", default-features = false }
tower-http = "0.4.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "fmt"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
inline_always = "allow"
items_after_statements = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
redundant_closure_for_method_calls = "allow"
manual_assert = "allow"
struct_field_names = "allow"

[profile.release]
debug = true
