[workspace]
resolver = "3"
members = [
    "crates/freighter",
    "crates/freighter-api-types",
    "crates/freighter-auth",
    "crates/freighter-client",
    "crates/freighter-pg-index",
    "crates/freighter-fs-index",
    "crates/freighter-server",
    "crates/freighter-storage",
]
default-members = ["crates/freighter"]

[workspace.package]
version = "2.0.1"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>", "Kornel Lesiński <kornel@cloudflare.com>"]
description = "Cloudflare's third-party Rust registry implementation"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cloudflare/freighter"
publish = ["crates-io", "freighter", "freighter-staging", "freighter-local"]
keywords = ["registries", "freighter"]
categories = []

[workspace.dependencies]
freighter-api-types = { path = "crates/freighter-api-types", version = "2.0.1" }
freighter-client = { path = "crates/freighter-client", version = "2.0.1" }
freighter-auth = { path = "crates/freighter-auth", version = "2.0.1" }
freighter-pg-index = { path = "crates/freighter-pg-index", version = "2.0.1" }
freighter-fs-index = { path = "crates/freighter-fs-index", version = "2.0.1" }
freighter-server = { path = "crates/freighter-server", version = "2.0.1" }
freighter-storage = { path = "crates/freighter-storage", version = "2.0.1" }

anyhow = "1.0.100"
async-trait = "0.1.89"
aws-sdk-s3 = "1.120.0"
aws-credential-types = "1.2.11"
axum = { version = "0.7.9", default-features = false }
axum-extra = { version = "0.9.6", features = ["json-lines"] }
base64 = "0.22"
bytes = "1.11.0"
chrono = { version = "0.4.43", default-features = false, features = ["std", "serde"] }
clap = { version = "4.5", default-features = false }
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
futures-util = { version = "0.3.31", default-features = false, features = ["async-await-macro"] }
hyper = { version = "1.8.1", default-features = false }
hex = { version = "0.4.3", features = ["serde"] }
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.16.2", default-features = false, features = ["http-listener"] }
postgres-types = "0.2.12"
rand = { version = "0.9" }
reqwest = { version = "0.12.28", default-features = false, features = ["json"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
hmac = "0.12.1" # must share digest with sha2
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tokio-stream = { version = "0.1.18", default-features = false }
tower = { version = "0.5.3", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["std", "fmt"] }
tempfile = "3.24.0"
tower-http = "0.6.8"
tracing = "0.1.44"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
inline_always = "allow"
items_after_statements = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
redundant_closure_for_method_calls = "allow"
manual_assert = "allow"
struct_field_names = "allow"

[profile.release]
debug = true
