[package]
name = "freeport-server"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Noah Kennedy <nomaxx117@gmail.com>"]
publish = ["nkcompute"]

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
clap = { workspace = true }
deadpool-postgres = { workspace = true }
postgres-types = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
