[package]
name = "freeport-server"
version = "0.0.5"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Noah Kennedy <nomaxx117@gmail.com>"]
publish = ["nkcompute"]

[dependencies]
freighter-index = { workspace = true, features = ["postgresql-client"] }

axum = { workspace = true, features = ["http1", "json", "tokio", "http2", "query", "form"] }
axum-extra = { workspace = true, features = ["json-lines"] }
aws-region = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["clock"] }
clap = { workspace = true, features = ["derive", "cargo", "unicode", "wrap_help"] }
deadpool-postgres = { workspace = true, features = ["serde"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true, features = ["http-listener"] }
rand = { workspace = true }
rust-s3 = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { workspace = true }
tower-http = { workspace = true, features = ["catch-panic", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
