[package]
name = "freighter-api-types"
version = "0.1.0-rc"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>"]
repository = "https://github.com/cloudflare/freighter"
description = "Crate index traits and implementations for the freighter registry"
categories = []
keywords = ["registries", "freighter"]

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[features]
auth = []
index = ["dep:chrono", "dep:semver"]
ownership = []

client = ["dep:serde"]
server = ["dep:serde"]

postgres = ["dep:postgres-types"]

[dependencies]
chrono = { workspace = true, optional = true, features = ["serde"] }
postgres-types = { workspace = true, optional = true, features = ["derive", "with-chrono-0_4"] }
serde = { workspace = true, optional = true, features = ["derive"] }
semver = { workspace = true, optional = true, features = ["serde"] }
