[package]
name = "freighter-api-types"
version = "0.1.0-rc.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>"]
repository = "https://github.com/cloudflare/freighter"
description = "API types and definitions for the Freighter Rust crates registry"
categories = []
keywords = ["registries", "freighter"]

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[features]
auth = []
index = ["dep:chrono", "dep:semver", "dep:axum", "dep:anyhow", "dep:thiserror", "dep:async-trait", "dep:tracing", "dep:serde"]
ownership = []

client = ["dep:serde"]
server = ["dep:serde"]

postgres = ["dep:postgres-types"]

[dependencies]
anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
postgres-types = { workspace = true, optional = true, features = ["derive", "with-chrono-0_4"] }
serde = { workspace = true, optional = true }
semver = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
