[package]
name = "freighter-auth"
version = "0.1.0-rc.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Noah Kennedy <nomaxx117@gmail.com>"]
publish = ["freighter"]
repository = "https://github.com/cloudflare/freighter"
description = "Crate index traits and implementations for the freighter registry"
categories = ["asynchronous", "authentication"]
keywords = ["registries", "freighter"]

[features]
yes-backend = ["rand"]
pg-backend = ["rand", "deadpool-postgres", "tokio"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
deadpool-postgres = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"], optional = true }
tracing = { workspace = true }
