[package]
name = "freighter-auth"
version = "0.1.0-rc"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>"]
repository = "https://github.com/cloudflare/freighter"
description = "Crate index traits and implementations for the freighter registry"
categories = ["asynchronous", "authentication"]
keywords = ["registries", "freighter"]

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["pg-backend"]
yes-backend = []
pg-backend = ["dep:deadpool-postgres", "dep:tokio"]
fs-backend = ["dep:sha2", "dep:base64", "dep:serde_json", "dep:parking_lot", "dep:tempfile", "dep:hmac"]

[dependencies]
freighter-api-types = { workspace = true, features = ["ownership"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
deadpool-postgres = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"], optional = true }
tracing = { workspace = true }
sha2 = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
parking_lot = { version = "0.12.1", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
