[package]
name = "freighter-client"
version = "0.1.0-rc"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>"]
repository = "https://github.com/cloudflare/freighter"
description = "Crate index traits and implementations for the freighter registry"
categories = ["asynchronous"]
keywords = ["registries", "freighter"]

[dependencies]
freighter-api-types = { workspace = true, features = ["auth", "index", "ownership", "client"] }

anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
semver = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
