[package]
name = "freighter-index"
version = "0.1.0-rc"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Noah Kennedy <nomaxx117@gmail.com>"]
publish = ["nkcompute"]
repository = "https://github.com/Noah-Kennedy/freighter"
description = "Crate index traits and implementations for the freighter registry"
categories = ["asynchronous"]
keywords = ["registries", "freighter"]

[features]
postgresql-backend = ["postgres-types"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
deadpool-postgres = { workspace = true }
futures-util = { workspace = true }
metrics = { workspace = true }
postgres-types = { workspace = true, features = ["derive", "with-chrono-0_4"], optional = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
