[package]
name = "freighter-pg-index"
version = "0.1.0-rc"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>"]
repository = "https://github.com/cloudflare/freighter"
description = "Postgres index implementation for the freighter registry"
categories = ["asynchronous"]
keywords = ["registries", "freighter"]

[lib]
path = "src/postgres_client.rs"

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
freighter-api-types = { workspace = true, features = ["index", "postgres"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
deadpool-postgres = { workspace = true }
futures-util = { workspace = true }
metrics = { workspace = true }
postgres-types = { workspace = true, features = ["derive", "with-chrono-0_4"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
