[package]
name = "freighter-server"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Noah Kennedy <nomaxx117@gmail.com>"]
publish = ["nkcompute"]

[dependencies]
freighter-auth = { workspace = true, features = ["yes-backend"] }
freighter-index = { workspace = true, features = ["postgresql-backend"] }
freighter-storage = { workspace = true, features = ["s3-backend"] }

anyhow = { workspace = true }
axum = { workspace = true, features = ["json", "query", "form", "matched-path"] }
axum-extra = { workspace = true, features = ["json-lines"] }
metrics = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true, features = ["catch-panic", "trace"] }
tracing = { workspace = true }
