[package]
name = "freighter-server"
version = "0.1.0-rc"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Noah Kennedy <nomaxx117@gmail.com>"]
publish = ["nkcompute"]
repository = "https://github.com/Noah-Kennedy/freighter"
description = "Crate index traits and implementations for the freighter registry"
categories = ["asynchronous"]
keywords = ["registries", "freighter"]

[features]
test_e2e = []

[dependencies]
freighter-auth = { workspace = true, features = ["yes-backend"] }
freighter-index = { workspace = true, features = ["postgresql-backend"] }
freighter-storage = { workspace = true, features = ["s3-backend"] }

anyhow = { workspace = true }
axum = { workspace = true, features = ["json", "query", "form", "matched-path"] }
axum-extra = { workspace = true, features = ["json-lines"] }
metrics = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true, features = ["catch-panic", "trace"] }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
deadpool-postgres = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
