[package]
name = "freighter-server"
version = "0.1.0-rc"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>"]
repository = "https://github.com/cloudflare/freighter"
description = "Crate index traits and implementations for the freighter registry"
categories = ["asynchronous"]
keywords = ["registries", "freighter"]

[features]
test_e2e = [
    "dep:deadpool-postgres",
    "dep:freighter-pg-index",
    "dep:freighter-fs-index",
    "dep:reqwest",
    "axum/tokio",
    "axum/http1",
    "dep:tracing-subscriber",
    "freighter-auth/pg-backend",
    "dep:freighter-client"
]

[dependencies]
freighter-api-types = { workspace = true, features = ["server", "index", "auth"] }
freighter-client = { workspace = true, optional = true }
freighter-auth = { workspace = true, features = ["yes-backend"] }
freighter-storage = { workspace = true, features = ["s3-backend"] }
freighter-pg-index = { workspace = true, optional = true }
freighter-fs-index = { workspace = true, optional = true }

anyhow = { workspace = true }
axum = { workspace = true, features = ["json", "query", "form", "matched-path"] }
axum-extra = { workspace = true, features = ["json-lines"] }
deadpool-postgres = { workspace = true, optional = true }
metrics = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true, features = ["json"], optional = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true, features = ["catch-panic", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true, features = ["fmt"] }

[dev-dependencies]
freighter-api-types = { workspace = true, features = ["client"] }

async-trait = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tower = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
