[package]
name = "freighter-storage"
version = "0.1.0-rc"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Noah Kennedy <nomaxx117@gmail.com>"]
repository = "https://github.com/cloudflare/freighter"
description = "Crate index traits and implementations for the freighter registry"
categories = ["asynchronous"]
keywords = ["registries", "freighter"]

[features]
s3-backend = ["dep:aws-credential-types", "dep:aws-sdk-s3"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
aws-credential-types = { workspace = true, optional = true, features = ["hardcoded-credentials"] }
aws-sdk-s3 = { workspace = true, optional = true, features = ["rt-tokio", "native-tls"] }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
