[package]
name = "freighter-api-types"
version = "1.0.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[features]
auth = []
index = ["dep:semver", "dep:axum", "dep:anyhow", "dep:thiserror", "dep:async-trait", "dep:tracing", "dep:serde", "dep:serde_json"]
storage = ["dep:axum", "dep:anyhow", "dep:async-trait", "dep:bytes", "dep:thiserror", "dep:tracing"]
ownership = []

client = ["dep:serde"]
server = ["dep:serde"]

postgres = ["dep:postgres-types"]

[dependencies]
anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
chrono = { workspace = true }
postgres-types = { workspace = true, optional = true, features = ["derive", "with-chrono-0_4"] }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
semver = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[lints]
workspace = true
